<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SCamera</string>
    <string name="btn">打开相机</string>
    
    <string name="stop">关闭相机</string>
	<string name="autoupload">自动上传到百度网盘</string>
	<string name="spinnerint">设置窗口尺寸:</string>
	<string-array name="spinnertext">
	    <item>大</item>
	    <item>中</item>
        <item>小</item>
        <item>隐藏</item>	    
	</string-array>
    <string name="texton">开</string>
    <string name="textoff">关</string>
    <string name="bind">绑定百度网盘</string>
    
    <string name="setting">系统设置</string>
    <string name="previewshow">显示预览窗口</string>
    <string name="previewsize">预览窗口大小</string>
    <string name="previewsize0">大</string>
    <string-array name="previewsizetext">
	    <item>大</item>
	    <item>中</item>
        <item>小</item>   
	</string-array>
	
    <string name="autosave">自动保存照片</string>
    <string name="savesize">照片保存大小</string>
    <string name="savesize0">640x480</string>
    <string-array name="savesizetext">
	    <item>640x480</item>
	    <item>800x600</item>
        <item>1024x768</item>
	</string-array>
    <string name="saveperoid">照片保存周期</string>
    <string name="saveperoid0">10秒</string>
    <string-array name="peroidtext">
	    <item>10秒</item>
	    <item>20秒</item>
        <item>30秒</item>   
	</string-array>
    <string name="savepath">照片保存目录</string>
    <string name="savepath0">手机</string>
    <string-array name="pathtext">
	    <item>手机</item>
	    <item>SD卡</item>  
	</string-array>
    <string name="moresetting">更多设置</string>
    <string name="usehelp">使用帮助</string>
    <string name="startfw">启 动 服 务</string>
    <string name="stopfw">停 止 服 务</string>
</resources>