<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    
    <RelativeLayout 
        android:layout_width="fill_parent" 
        android:layout_height="40.0dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textColor="#ff333333"
            android:textSize="20.0dip" />

    </RelativeLayout>
    
    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="#ffcfcfcf" />
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12.0dip"
        android:layout_marginRight="12.0dip"
        android:layout_marginTop="16.0dip"
        android:background="@drawable/qz_bg_container_cell_top_normal2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dip"
            android:text="@string/previewshow"
            android:textColor="#ff000000"
            android:textSize="16.0dip" />

        <CheckBox
            android:id="@+id/cb_showpreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dip"
            android:background="@drawable/check_bg"
            android:button="@null"
            android:checked="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12.0dip"
        android:layout_marginRight="12.0dip"
        android:background="@drawable/qz_bg_container_cell_bottom_normal2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dip"
            android:text="@string/previewsize"
            android:textColor="#ff000000"
            android:textSize="16.0dip" />

        <Spinner
            android:id="@+id/spinner_previewsize"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dip"
            android:alpha="80"
            android:entries="@array/previewsizetext"
            android:prompt="@string/previewsize0"
            android:textColor="@color/black" />

    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12.0dip"
        android:layout_marginRight="12.0dip"
        android:layout_marginTop="16.0dip"
        android:background="@drawable/qz_bg_container_cell_top_normal2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dip"
            android:text="@string/autosave"
            android:textColor="#ff000000"
            android:textSize="16.0dip" />

        <CheckBox
            android:id="@+id/cb_autosave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dip"
            android:background="@drawable/check_bg"
            android:button="@null"
            android:checked="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12.0dip"
        android:layout_marginRight="12.0dip"
        android:background="@drawable/qz_bg_container_cell_center_normal2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dip"
            android:text="@string/savesize"
            android:textColor="#ff000000"
            android:textSize="16.0dip" />

        <Spinner
            android:id="@+id/spinner_savesize"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dip"
            android:alpha="80"
            android:entries="@array/savesizetext"
            android:prompt="@string/savesize0"
            android:textColor="@color/black" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12.0dip"
        android:layout_marginRight="12.0dip"
        android:background="@drawable/qz_bg_container_cell_center_normal2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dip"
            android:text="@string/saveperoid"
            android:textColor="#ff000000"
            android:textSize="16.0dip" />

        <Spinner
            android:id="@+id/spinner_saveperoid"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dip"
            android:alpha="80"
            android:entries="@array/peroidtext"
            android:prompt="@string/saveperoid0"
            android:textColor="@color/black" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12.0dip"
        android:layout_marginRight="12.0dip"
        android:background="@drawable/qz_bg_container_cell_bottom_normal2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dip"
            android:text="@string/savepath"
            android:textColor="#ff000000"
            android:textSize="16.0dip" />

        <Spinner
            android:id="@+id/spinner_savepath"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dip"
            android:alpha="80"
            android:entries="@array/pathtext"
            android:prompt="@string/savepath0"
            android:textColor="@color/black" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12.0dip"
        android:layout_marginRight="12.0dip"
        android:layout_marginTop="16.0dip"
        android:background="@drawable/qz_bg_container_cell_top_normal2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dip"
            android:text="@string/moresetting"
            android:textColor="#ff000000"
            android:textSize="16.0dip" />

        <ImageView 
            android:background="@drawable/arrow" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginRight="15.0dip" 
            android:layout_alignParentRight="true" 
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12.0dip"
        android:layout_marginRight="12.0dip"
        android:background="@drawable/qz_bg_container_cell_bottom_normal2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15.0dip"
            android:text="@string/usehelp"
            android:textColor="#ff000000"
            android:textSize="16.0dip" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dip"
            android:background="@drawable/arrow" />
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12.0dip"
        android:layout_marginRight="12.0dip"
        android:layout_marginTop="16.0dip"
        android:background="@drawable/qz_bg_container_cell_single" >

        <Button
            android:id="@+id/startservice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/qz_bg_container_cell_single"
            android:text="@string/startfw"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

    </RelativeLayout>

</LinearLayout>
